force-app/main/default/objects/Investment__c/Investment__c.object-meta.xml
<CustomObject>
    <description>Used for tracking the status and value of an investment. Investments can be loans, grants, equity, etc.</description>
    <label>Investment</label>
    <nameField>
        <label>Investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>