force-app/main/default/objects/Investment__c/fields/Available_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Disbursement_Amount__c</fullName>
    <description>how much is still available to be planned or disbursed</description>
    <formula>Amount__c - Disbursed_Amount__c - Planned_Disbursement_Amount__c - IF(TEXT(Setup_Fee_Charging_Method__c) == &#39;Deducted From Principal&#39;, Setup_Fee_Expected__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>