force-app/main/default/objects/Investment__c/fields/Capitalized_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capitalized_Fee_Amount__c</fullName>
    <label>Capitalized Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>