force-app/main/default/objects/Investment__c/fields/Create_Remaining_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Create_Remaining_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Remaining Schedule</label>
    <type>Checkbox</type>
</CustomField>