force-app/main/default/objects/Investment__c/fields/Days_Behind_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Days_Behind_Schedule__c</fullName>
    <formula>if( Last_Payment_Date_Due__c &lt; TODAY(), today() - Last_Payment_Date_Due__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Behind Schedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>