force-app/main/default/objects/Investment__c/fields/Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Amount__c</fullName>
    <description>how much of the loan amount has been disbursed</description>
    <label>Disbursed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>