force-app/main/default/objects/Investment__c/fields/Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Date__c</fullName>
    <description>The date on which the Loan is (expected to be) disbursed. From this day on, interest will be charged (if applicable)</description>
    <inlineHelpText>The date on which the Loan is (expected to be) disbursed. From this day on, interest will be charged (if applicable)</inlineHelpText>
    <label>Disbursement Date</label>
    <type>Date</type>
</CustomField>