force-app/main/default/objects/Investment__c/fields/Early_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Early_Payment_Method__c</fullName>
    <label>Early Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>interestDueToDate</fullName>
                <default>true</default>
                <label>Only Interest Due To Date Charged</label>
            </value>
            <value>
                <fullName>interestFullSchedule</fullName>
                <label>Full Interest For Scheduled Periods Charged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>