force-app/main/default/objects/Investment__c/fields/Errors_Creating_Remaining_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Errors_Creating_Remaining_Schedule__c</fullName>
    <label>Errors Creating Remaining Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>