force-app/main/default/objects/Investment__c/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <label>Expected End Date</label>
    <summarizedField>Repayment_Schedule__c.Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Repayment_Schedule__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>