force-app/main/default/objects/Investment__c/fields/Fees_Due__c.field-meta.xml
<CustomField>
    <fullName>Fees_Due__c</fullName>
    <label>Fees Due</label>
    <summarizedField>Repayment_Schedule__c.Fees_Due__c</summarizedField>
    <summaryFilterItems>
        <field>Repayment_Schedule__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>