force-app/main/default/objects/Investment__c/fields/Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid__c</fullName>
    <label>Fees Paid</label>
    <summarizedField>Repayment_Schedule__c.Fees_Paid__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>