force-app/main/default/objects/Investment__c/fields/Fees_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Fees_Remaining__c</fullName>
    <formula>Fees_Expected__c - Fees_Paid__c - Fees_Written_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fees Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>