force-app/main/default/objects/Investment__c/fields/Fees_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Fees_Written_Off__c</fullName>
    <description>Roll-up summary of Fees written off accross all repayment schedules</description>
    <label>Fees Written Off</label>
    <summarizedField>Repayment_Schedule__c.Fees_Written_Off__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>