force-app/main/default/objects/Investment__c/fields/First_Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Repayment_Date__c</fullName>
    <description>The date on which the first repayment for the loan is due. The rest of the loan schedule will also be based on this date.</description>
    <inlineHelpText>The date on which the first repayment for the loan is due. The rest of the loan schedule will also be based on this date.</inlineHelpText>
    <label>First Repayment Date</label>
    <type>Date</type>
</CustomField>