force-app/main/default/objects/Investment__c/fields/Fund_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Fund_Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Disbursement</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>