force-app/main/default/objects/Investment__c/fields/Fund_Drawdown_Status__c.field-meta.xml
<CustomField>
    <fullName>Fund_Drawdown_Status__c</fullName>
    <formula>text(Fund_Disbursement__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Drawdown Status</label>
    <type>Text</type>
</CustomField>