force-app/main/default/objects/Investment__c/fields/Grace_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Type__c</fullName>
    <label>Grace Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <label>No Grace</label>
            </value>
            <value>
                <fullName>Admin</fullName>
                <label>Pay Admin Fees Only</label>
            </value>
            <value>
                <fullName>Interest</fullName>
                <label>Pay Interest Only</label>
            </value>
            <value>
                <fullName>Interest Rollup</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
                <label>Full Grace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>