force-app/main/default/objects/Investment__c/fields/Health_Check_Fails__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_Fails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Check Fails</label>
    <type>Checkbox</type>
</CustomField>