force-app/main/default/objects/Investment__c/fields/Health_Check_Failures__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_Failures__c</fullName>
    <label>Health Check Failures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>