force-app/main/default/objects/Investment__c/fields/Interest_Expected0__c.field-meta.xml
<CustomField>
    <fullName>Interest_Expected0__c</fullName>
    <formula>IF(Open_Ended_Loan__c, Interest_Expected_Open_Ended_Loan__c, Interest_Expected_Standard_Loan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>