force-app/main/default/objects/Investment__c/fields/Interest_Expected_Open_Ended_Loan__c.field-meta.xml
<CustomField>
    <fullName>Interest_Expected_Open_Ended_Loan__c</fullName>
    <label>Interest Expected (Open Ended Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>