force-app/main/default/objects/Investment__c/fields/Interest_Expected_Standard_Loan__c.field-meta.xml
<CustomField>
    <fullName>Interest_Expected_Standard_Loan__c</fullName>
    <label>Interest Expected (Standard Loan)</label>
    <summarizedField>Repayment_Schedule__c.Interest_Expected_Standard_Loan__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>