force-app/main/default/objects/Investment__c/fields/Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>Interest_Paid__c</fullName>
    <label>Interest Paid</label>
    <summarizedField>Repayment_Schedule__c.Interest_Paid__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>