force-app/main/default/objects/Investment__c/fields/Interest_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Interest_Remaining__c</fullName>
    <formula>Interest_Expected0__c - Interest_Paid__c - Interest_Written_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>