force-app/main/default/objects/Investment__c/fields/Interest_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Interest_Written_Off__c</fullName>
    <description>Roll-up summary of Interest written off accross all repayment schedules</description>
    <label>Interest Written Off</label>
    <summarizedField>Repayment_Schedule__c.Interest_Written_Off__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>