force-app/main/default/objects/Investment__c/fields/Last_Instalment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Instalment_Amount__c</fullName>
    <label>Last Instalment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>