force-app/main/default/objects/Investment__c/fields/Last_Payment_Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date_Due__c</fullName>
    <label>Last Payment Date Due</label>
    <summarizedField>Repayment_Schedule__c.Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Repayment_Schedule__c.Status__c</field>
        <operation>equals</operation>
        <value>Late, Partially Paid(Late)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Repayment_Schedule__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>