force-app/main/default/objects/Investment__c/fields/Last_Recalculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Recalculation_Date__c</fullName>
    <description>This is a date when the recalculation batch has finished a job successfully or has been failed.</description>
    <label>Last Recalculation Date</label>
    <type>DateTime</type>
</CustomField>