force-app/main/default/objects/Investment__c/fields/Late_Repayment_Fees_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_Overdue__c</fullName>
    <formula>if(Late_Repayment_Fees_Due__c - Late_Repayment_Fees_Paid__c- Late_Repayment_Fees_Written_Off__c&lt;0,0,Late_Repayment_Fees_Due__c - Late_Repayment_Fees_Paid__c - Late_Repayment_Fees_Written_Off__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Repayment Fees Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>