force-app/main/default/objects/Investment__c/fields/Late_Repayment_Fees_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_Written_Off__c</fullName>
    <label>Late Repayment Fees Written Off</label>
    <summarizedField>Repayment_Schedule__c.Late_Repayment_Fees_Written_Off__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>