force-app/main/default/objects/Investment__c/fields/Late_Repayment_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Interest_Rate__c</fullName>
    <label>Late Repayment Interest Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>