force-app/main/default/objects/Investment__c/fields/Late_Repayment_Tolerance_Period__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Tolerance_Period__c</fullName>
    <description>In the Late Repayment Tolerance Period you can define a number of days before which no penalties will be applied to an account even if there is a late repayment.</description>
    <inlineHelpText>In the Late Repayment Tolerance Period you can define a number of days before which no penalties will be applied to an account even if there is a late repayment.</inlineHelpText>
    <label>Late Repayment Tolerance Period (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>