force-app/main/default/objects/Investment__c/fields/Loan_Fund__c.field-meta.xml
<CustomField>
    <fullName>Loan_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Loan Fund this loan belongs to</description>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>