force-app/main/default/objects/Investment__c/fields/Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Loan Product which this Loan is based on.</description>
    <inlineHelpText>The Loan Product which this Loan is based on.</inlineHelpText>
    <label>Loan Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Loan_Product__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Loan_Product__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>