force-app/main/default/objects/Investment__c/fields/Migrated_Instalment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Instalment_Amount__c</fullName>
    <label>Migrated Instalment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>