force-app/main/default/objects/Investment__c/fields/Migrated_Next_First_Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Next_First_Repayment_Date__c</fullName>
    <label>Migrated Next First Repayment Date</label>
    <type>Date</type>
</CustomField>