force-app/main/default/objects/Investment__c/fields/Migrated_Outstanding_Capital__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Outstanding_Capital__c</fullName>
    <label>Migrated Outstanding Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>