force-app/main/default/objects/Investment__c/fields/Migrated_Remaining_Grace_Periods__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Remaining_Grace_Periods__c</fullName>
    <label>Migrated Remaining Grace Periods</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>