force-app/main/default/objects/Investment__c/fields/Monitoring_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Fee_Percentage__c</fullName>
    <label>Monitoring Fee Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>