force-app/main/default/objects/Investment__c/fields/Monitoring_Fees_Expected__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Fees_Expected__c</fullName>
    <label>Monitoring Fees Expected</label>
    <summarizedField>Repayment_Schedule__c.Monitoring_Fees_Expected__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>