force-app/main/default/objects/Investment__c/fields/Non_Working_Days_Rescheduling__c.field-meta.xml
<CustomField>
    <fullName>Non_Working_Days_Rescheduling__c</fullName>
    <description>This setting determines what happens to loan repayments that fall on these days.</description>
    <label>Non-Working Days Rescheduling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not reschedule repayments</fullName>
                <default>true</default>
                <label>Do not reschedule repayments</label>
            </value>
            <value>
                <fullName>Move ahead to next working day</fullName>
            </value>
            <value>
                <fullName>Move backward to previous working day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>