force-app/main/default/objects/Investment__c/fields/Number_of_Grace_Periods__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Grace_Periods__c</fullName>
    <label>Number of Grace Periods</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>