force-app/main/default/objects/Investment__c/fields/Open_Ended_Loan__c.field-meta.xml
<CustomField>
    <fullName>Open_Ended_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Open Ended loans are loans with no fixed end date and no fixed repayment schedule. Investees can disburse money from it and repay money to it whenever they want, as long as they don’t go over the principal amount.</description>
    <inlineHelpText>Open Ended loans are loans with no fixed end date and no fixed repayment schedule.</inlineHelpText>
    <label>Open Ended Loan</label>
    <type>Checkbox</type>
</CustomField>