force-app/main/default/objects/Investment__c/fields/Percent_of_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Disbursement_Amount__c</fullName>
    <label>% of Disbursement Amount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>