force-app/main/default/objects/Investment__c/fields/Planned_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Planned_Disbursement_Amount__c</fullName>
    <description>how much of disbursements is planned</description>
    <label>Planned Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>