force-app/main/default/objects/Investment__c/fields/Portfolio_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_At_Risk__c</fullName>
    <formula>if( Days_Behind_Schedule__c &gt; 30, Principal_Remaining__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio At Risk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>