force-app/main/default/objects/Investment__c/fields/Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>Principal_Paid__c</fullName>
    <label>Principal Paid</label>
    <summarizedField>Repayment_Schedule__c.Principal_Paid__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>