force-app/main/default/objects/Investment__c/fields/Principal_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Principal_Written_Off__c</fullName>
    <description>Sum of all Principal amounts written off accross Repayment Schedules</description>
    <label>Principal Written Off</label>
    <summarizedField>Repayment_Schedule__c.Principal_Written_Off__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>