force-app/main/default/objects/Investment__c/fields/Recalculation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Recalculation_Error_Message__c</fullName>
    <label>Recalculation Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>